I have created funtionalities for filtering data based on population and languages and made the main page responsive

--- a/country.html
+++ b/country.html
@@ -14,13 +14,14 @@
         <div class="nav-content">
             <div class="nav-left">
                 <i class="fas fa-globe-americas"></i>
-                <h1>World Explorer</h1>
+               <a class="anchortag" href="./index.html"> <h1>World Explorer</h1></a>
             </div>
             <h2 class="horizon">Horizon</h2>
         </div>
     </nav>
 
     <div class="full-page">
+        
         <div class="country-details">
 
 
